# oraclex

./: .gitignore  MotsCles.txt  README.md  db.sqlite3  init_data.py  manage.py  pyproject.toml  requirements.txt
Décisions/ACCORD RETRAITE 2008/: Thumbs.db
Décisions/AT-MP Prestation en espèce/: Thumbs.db
Décisions/Actualité Juridique (AJ)/: 0 - AJ vierge.docx  AJ n°10 du 1er au 18 septembre 2020.docx  AJ n°8 du 20 juillet 2020.docx  AJ n°9 du 31 juillet 2020.docx  Actualités juridiques majeures 15 juin 2020.docx  Actualités juridiques majeures n° 7 le 26 juin 2020.docx
Décisions/CDD-intérim/: Cour_de_cassation_civile_Chambre_sociale_9_décembre_2009_08-41[1].737_Publié_au_bulletin.rtf  Thumbs.db
Décisions/CE/: 2009 06 F TGI TOURS.rtf  2010 09 F CCass.rtf  IST et RFF.doc  Thumbs.db  note J sur le GSN .doc
Décisions/CHSCT/: 09.06.PC20090615 courrier Ministere nombre CHSCT .doc  10.10.étude sur les coûts expertise CHSCT.doc  Argumentation game Sécurité Sirius.doc  CC102010.doc  Cour_de_cassation_civile_Chambre_sociale_30_juin_2010_09-13[1].640_Publié_au_bulletin.rtf  JCP S 2010-1226.rtf  Ord Ref TGI Evry 10 00274.tif  (+10 more)
app/: admin.py  fields.py  models.py  urls.py
codes_python_old/: lisible.py  neuralNetwork.py  resume.py
config/: asgi.py  db2.sqlite3  settings.py  urls.py  wsgi.py
doc/: bdd.uxf  schemas.docx
media/: Conseil_Prudhommes.csv  Cour_Appel.csv  Tribunal_Judiciaire.csv  mots_cles.txt
mysite/: settings.py
oraclex/: db.sqlite3  manage.py  requirements.txt  update_data.py
templates/: base.html  base_app.html  base_generic.html
(+246 files in other folders)
